fix bugs Scroll Overflow

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,7 @@
+body,
+html {
+    overflow-x: hidden;
+}
 .App {
     text-align: center;
 }
@@ -6,7 +10,6 @@
     height: 40vmin;
     pointer-events: none;
 }
-
 @media (prefers-reduced-motion: no-preference) {
     .App-logo {
         animation: App-logo-spin infinite 20s linear;
